--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,29 @@
-# use C-a for the command prefix, like screen
-set -g prefix C-a
 unbind C-b
+set -g prefix C-a
 
-# actually send C-a if needed
-bind C-a send-prefix
+setw -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 
+set -g default-terminal "screen-256color"
+
+set -g status-fg '#888888'
+set -g status-bg '#333333'
+
+set -g pane-active-border-fg '#333333'
+set -g pane-border-fg '#333333'
+
+set-option -g status-utf8 on
+
+set -g status-interval 30
+
+set -g status-justify centre
+
+set -g status-left-length 60
+set -g status-left "%A, %B #(date +%d | bc), %Y %H:%M"
+
+set -g status-right '#(bash -ic battery)'
