--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color-italic"
 
 set-option -g status-utf8 on
 
