--- a/tmux.conf
+++ b/tmux.conf
@@ -20,4 +20,4 @@ set -g status-justify centre
 set -g status-left-length 60
 set -g status-left "%A, %B #(date +%d | bc), %Y %H:%M"
 
-set -g status-right '#(hostname | cut -d '.' -f 1) #(bash -ic battery)'
+set -g status-right '#(bash -ic battery)'
