--- a/tmux.conf
+++ b/tmux.conf
@@ -1,23 +1,31 @@
 unbind C-b
 set -g prefix C-a
 
+setw -g utf8 on
+
+set -g base-index 1
+set -g pane-base-index 1
+
 setw -g mode-keys vi
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
 
 set -g default-terminal "xterm-256color-italic"
 
-set-option -g status-utf8 on
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 10
 
-set -g status-interval 30
-
-set -g status-justify centre
-
-set -g status-left-length 60
-set -g status-left "%A, %B #(date +%d | bc), %Y %H:%M"
-
+set -g status-left ''
 set -g status-right '#(bash -ic battery)'
+
+setw -g window-status-format "#[fg=white]#[bg=brightyellow] #I #[fg=black]#[bg=brightblack] #W "
+setw -g window-status-current-format "#[fg=white]#[bg=brightyellow] #I #[fg=black]#[bg=brightblue] #W "
+setw -g window-status-bg brightblack
+setw -g window-status-fg black
+
+set -g pane-border-fg brightyellow
+set -g pane-active-border-fg brightblue
