--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,9 @@ set -g prefix C-a
 
 setw -g utf8 on
 
+setw -g clock-mode-colour blue
+setw -g clock-mode-style 24
+
 set -g base-index 1
 set -g pane-base-index 1
 
@@ -15,7 +18,7 @@ bind l select-pane -R
 
 set -g default-terminal "xterm-256color-italic"
 
-set -g status-bg default
+set -g status-bg brightgreen
 set -g status-fg colour12
 set -g status-interval 10
 
@@ -28,4 +31,9 @@ setw -g window-status-bg brightblack
 setw -g window-status-fg black
 
 set -g pane-border-fg brightyellow
-set -g pane-active-border-fg brightblue
+set -g pane-active-border-fg brightyellow
+
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
