--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@ set -g prefix C-a
 
 setw -g utf8 on
 
+set -g default-command "${SHELL}"
+
 setw -g clock-mode-colour blue
 setw -g clock-mode-style 24
 
