--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-set -g default-terminal "xterm-256color-italic"
+set -g default-terminal "xterm-256color"
 
 set -g status-bg brightgreen
 set -g status-fg colour12
